--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,11 @@
 	
 	<distributionManagement>
 	
-	    <releaseRepository>
+	    <repository>
 	      <id>nexus</id>
 	      <name>wallmart-release</name>
 		    <url>http://18.118.18.227:9081/repository/wallmart-release/</url>
-	    </releaseRepository>
+	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
