--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>wallmart-release</name>
+	      <name>wallmart-release Repository</name>
 		    <url>http://18.118.18.227:9081/mithuntechnologies/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>wallmart-snapshot</name>
+	      <name>wallmart-snapshot Repository</name>
 	      <url>http://18.118.18.227:9081/mithuntechnologies/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
